feat: Add archive page, category model, and associated tests
- Removed README.MD.
- Added `archive.html` template for displaying categories and posts.
- Implemented `CategoryInfo` record in the category model.
- Created `CategoryInfoTest` for verifying category model functionalities.